--- a/src/components/common/colors.scss
+++ b/src/components/common/colors.scss
@@ -158,3 +158,5 @@ $size54:3.375rem;
 $size56:3.5rem;
 $size64:4rem;
 $size72:4.5rem;
+
+$z-index-sticky: 1100;
