--- a/src/components/projectEdit/ProjectEdit.scss
+++ b/src/components/projectEdit/ProjectEdit.scss
@@ -405,6 +405,7 @@
 
 .sticky{
   min-height: 0;
+  z-index: $z-index-sticky;
 }
 
 .modal {
